--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,8 @@ a{
 @media (max-width:1280px){
     .container{
         width:1024px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 @media (max-width:1024px){
